--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
 #root {
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-  width:100%
+  width:100%;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
+  background:
+    linear-gradient(0deg, rgba(32, 32, 64), rgba(0, 0, 0, 0) 70.71%),
+    linear-gradient(130deg, rgba(32, 64, 32), rgba(0, 0, 0, 0) 70.71%);
 }
 
