--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@ body {
   margin: 0;
   min-height: 100vh;
   background:
-    linear-gradient(0deg, rgba(32, 32, 64), rgba(0, 0, 0, 0) 70.71%),
-    linear-gradient(130deg, rgba(32, 32, 32), rgba(0, 0, 0, 0) 70.71%);
+    linear-gradient(130deg, var(--color-gray-900), rgba(0, 0, 0, 0) 70.71%);
 }
 
 @media (max-width: 640px) {
