--- a/src/index.css
+++ b/src/index.css
@@ -13,58 +13,17 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+
+  --color-gray-50: rgb(650, 406, 351);
+  --color-gray-100: rgb(585, 343, 289);
+  --color-gray-200: rgb(520, 286, 233);
+  --color-gray-300: rgb(455, 233, 183);
+  --color-gray-400: rgb(390, 185, 139);
+  --color-gray-500: rgb(325, 142, 101);
+  --color-gray-600: rgb(260, 104, 69);
+  --color-gray-700: rgb(195, 70, 43);
+  --color-gray-800: rgb(130, 42, 22);
+  --color-gray-900: rgb(65, 19, 8);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
