--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 #root {
   margin: 0 auto;
   padding: 2rem 2rem 0 2rem;
@@ -41,6 +42,12 @@ ul {
 
   ul {
     column-count:1;
+  }
+}
+
+@layer base {
+  img {
+    @apply h-auto max-w-none;
   }
 }
 
